--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta?</h2>
+    <img src="house blend.jpeg" alt="">
 </body>
 
 </html>
